# lliurex-java-panel

./: generate_po.sh  pyproject.toml  setup.py
debian/: changelog  control  links  lliurex-java-panel.dirs  lliurex-java-panel.install  lliurex-java-panel.pkexec  lliurex-java-panel.pofiles  postinst  prerm  rules
lliurex-java-panel/: lliurex-java-panel
lliurex-java-panel/data-files/: swing.properties
lliurex-java-panel/data-files/supported-javas/: openjdk11  openjdk13  openjdk14  openjdk16  openjdk17  openjdk18  openjdk19  openjdk21  openjdk8  openjdk9  oracle-java6  oracle-java8  oracle-java9
lliurex-java-panel/lliurexjavapanel/: ConfigurationBox.py  ConfigurationModel.py  Core.py  IconProvider.py  InstallStack.py  JavaPanelManager.py  JavaStack.py  JavasModel.py  LoadingBox.py  MainStack.py  MainWindow.py  SettingsStack.py  UnInstallStack.py  settings.py
lliurex-java-panel/lliurexjavapanel/rsrc/: ApplicationOptions.qml  CustomDialog.qml  CustomPopup.qml  JavasList.qml  JavasPanel.qml  KonsolePanel.qml  ListDelegateConfigItem.qml  ListDelegatePkgItem.qml  Loading.qml  SettingsList.qml  SettingsPanel.qml  lliurex-java-panel.qml  loadingBox.ui  (+1 more)
lliurex-java-panel/python3-lliurexjavapanel/: ConfigurationBox.py  InstallersBox.py  MainWindow.py  Test.py  javaPanelManager.py  waitingSpinner.py
lliurex-po/: generate_po.sh
lliurex-po/lliurex-java-panel/: ca@valencia.po  es.po  es_ES.po  lliurex-java-panel.pot
translations/: ca@valencia.po  es_ES.mo  es_ES.po  lliurex-java-panel.pot
zero-center-files/: lliurex-java-panel.app  lliurex-java-panel.zmd
(+12 files in other folders)
